--- a/templates/includes/loans_sidebar.html
+++ b/templates/includes/loans_sidebar.html
@@ -25,7 +25,7 @@
                 </a>
                 <ul class="submenu">
                     <li class="submenu-item">
-                        <a href="#active-loans" class="submenu-link">Active Loans</a>
+                        <a href="{% url 'loans' %}" class="submenu-link">Active Loans</a>
                     </li>
                     <li class="submenu-item">
                         <a href="#loan-applications" class="submenu-link">Applications</a>
