--- a/templates/includes/loans_sidebar.html
+++ b/templates/includes/loans_sidebar.html
@@ -12,7 +12,7 @@
     <nav class="sidebar-nav">
         <ul class="nav-menu">
             <li class="nav-item active">
-                <a href="#dashboard" class="nav-link">
+                <a href="{% url 'dashboard' %}" class="nav-link">
                     <i class="fas fa-home"></i>
                     <span class="nav-text">Dashboard</span>
                 </a>
@@ -101,7 +101,7 @@
                 </a>
             </li>
             <li class="nav-item">
-                <a href="#logout" class="nav-link">
+                <a href="{% url 'logout' %}" class="nav-link">
                     <i class="fas fa-sign-out-alt"></i>
                     <span class="nav-text">Logout</span>
                 </a>
